[tool.poetry]
name = "hymir"
version = "0.1.2"
description = "Simple workflows."
authors = ["Tyler Kennedy <tk@tkte.ch>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
networkx = "^3.2.1"
redis = "^5.0.3"
pygraphviz = {version = "^1.12", optional = true}
matplotlib = {version = "^3.8.3", optional = true}
celery = {version = "^5.3.6", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
black = "^24.3.0"
sphinx = "^7.2.6"
furo = "^2024.1.29"
pytest-cov = "^5.0.0"

[tool.poetry.extras]
viz = ["pygraphviz", "matplotlib"]
celery = ["celery"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
